@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Keep NPC messages only, in case NPCs are removed during the dialog.
+Nicolas Weeger 2010-05-08
+
 Extract talk_info to dialog.h. Use sstring for various messages.
 Nicolas Weeger 2010-05-08
 
